--- a/Resources/views/AuditForm/edit.html.twig
+++ b/Resources/views/AuditForm/edit.html.twig
@@ -45,7 +45,7 @@
                         <th width=20%>Title</th>
                         <th width=65%></th>
                         <th width=5%>Weight</th>
-                        <th width=5%>Fatal</th>
+                        <th width=5%>Flag</th>
                         <th width=5%></th>
                     </tr>
                 </thead>
@@ -55,7 +55,7 @@
                 {% else %}
                     <tr class="warning-empty">
                         <td colspan="6">
-                            <i class="icon-warning-sign"></i> 
+                            <i class="icon-warning-sign"></i>
                             No section assigned to this form.
                         </td>
                     </tr>
