--- a/Resources/views/AuditFormField/index.html.twig
+++ b/Resources/views/AuditFormField/index.html.twig
@@ -19,8 +19,8 @@
                     <th width=35%></th>
                     <th width=30%>Section</th>
                     <th width=5%>Weight</th>
-                    <th width=5%>Fatal</th>
-                    <th width=5%></th>                         
+                    <th width=5%>Flag</th>
+                    <th width=5%></th>
                 </tr>
             </thead>
             <tbody>
@@ -36,5 +36,5 @@
             </tbody>
         </table>
     </div>
-</div>    
+</div>
 {% endblock %}
