--- a/Resources/views/Audit/view.html.twig
+++ b/Resources/views/Audit/view.html.twig
@@ -16,8 +16,8 @@
                 <tr>
                     <td>{{ audit.auditReference }}</td>
                     <td>
-                    {% if audit.failed == true %}
-                        <div class="text-warning">FAILED</div>
+                    {% if audit.flag == true %}
+                        <div class="text-warning">{{ audit.flagText }}</div>
                     {% else %}
                         {{ audit.totalResult }}
                     {% endif %}
@@ -51,8 +51,8 @@
                         <td>{{ field.title }}</td>
                         <td>{{ score.score }}</td>
                         <td>
-                        {% if field.fatal == true %}
-                            Involve Mgr
+                        {% if field.flag == true %}
+                            {{ field.flagText }}
                         {% else %}
                             {{ field.weight }}
                         {% endif %}
@@ -73,8 +73,8 @@
             <tr>
                 <td colspan="2" style="text-align: right">Final Score</td>
                 <td>
-                {% if audit.failed == true %}
-                    <div class="text-warning">FAILED</div>
+                {% if audit.flag == true %}
+                    <div class="text-warning">{{ audit.flagText }}</div>
                 {% else %}
                     {{ audit.totalResult }}
                 {% endif %}
