--- a/Resources/views/AuditFormField/_load.html.twig
+++ b/Resources/views/AuditFormField/_load.html.twig
@@ -3,8 +3,8 @@
     <td colspan="2" style="padding-left: 50px;">{{ field.title }}</td>
     <td>{{ field.weight }}</td>
     <td>
-    {% if field.fatal == 1 %}
-        <i class="icon-check"/>
+    {% if field.flag == 1 %}
+        <i class="icon-check"/> {{ field.flagText }}
     {% else %}
         <i class="icon-check-empty"/>
     {% endif %}
@@ -12,15 +12,15 @@
     <td>
         <div class="btn-group">
             <a class="btn btn-mini cisco-audit-field-view">
-                <i class="icon-eye-open" title="View"></i> 
-            </a>  
+                <i class="icon-eye-open" title="View"></i>
+            </a>
             <a class="btn btn-mini cisco-audit-field-edit"
                 href="{{ path( 'cisco_auditfield_edit', { 'field_id': field.id } ) }}">
-                <i class="icon-wrench" title="Edit"></i> 
-            </a>  
-            <a class="btn btn-mini cisco-audit-field-remove" 
+                <i class="icon-wrench" title="Edit"></i>
+            </a>
+            <a class="btn btn-mini cisco-audit-field-remove"
                href="{{ path( 'cisco_auditsection_remove', { 'section_id' : section.id ,'field_id': field.id } ) }}">
-                <i class="icon-minus" title="Remove"></i> 
+                <i class="icon-minus" title="Remove"></i>
             </a>
         </div>
     </td>
