--- a/Resources/views/AuditFormField/_view.html.twig
+++ b/Resources/views/AuditFormField/_view.html.twig
@@ -10,8 +10,8 @@
     </td>
     <td>{{ field.weight }}</td>
     <td>
-    {% if field.fatal == 1 %}
-        <i class="icon-check"/>
+    {% if field.flag == 1 %}
+        <i class="icon-check"/> {{ field.flagText }}
     {% else %}
         <i class="icon-check-empty"/>
     {% endif %}
@@ -30,7 +30,7 @@
                 href="{{ path( 'cisco_auditfield_delete', { 'field_id': field.id } ) }}">
                 <i class="icon-trash"></i>
             </a>
-        </div>        
+        </div>
     </td>
 </tr>
 <tr class="cisco-audit-desc-row" style="display: none;">
