changed fatal/failed to flag and moved flaglabel from audit to auditform

--- a/Resources/views/AuditFormField/_load.html.twig
+++ b/Resources/views/AuditFormField/_load.html.twig
@@ -4,7 +4,7 @@
     <td>{{ field.weight }}</td>
     <td>
     {% if field.flag == 1 %}
-        <i class="icon-check"/> {{ field.flagText }}
+        <i class="icon-check"/>
     {% else %}
         <i class="icon-check-empty"/>
     {% endif %}
