--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -53,7 +53,7 @@
                     <th>Title</th>
                     <th>description</th>
                     <th>Weight</th>
-                    <th>Fatal</th>
+                    <th>Flag</th>
                 </tr>
             </thead>
             <tbody>
