--- a/Resources/views/Audit/index.html.twig
+++ b/Resources/views/Audit/index.html.twig
@@ -30,7 +30,7 @@
                     <td>{{ audit.auditForm }}</td>
                     <td>
                     {% if audit.flag == true %}
-                        <div class="text-warning">{{ audit.flagText }}</div>
+                        <div class="text-warning">{{ audit.auditForm.flagLabel }}</div>
                     {% else %}
                         {{ result }}
                     {% endif %}
