minor convenience changes on template

--- a/Resources/views/AuditForm/edit.html.twig
+++ b/Resources/views/AuditForm/edit.html.twig
@@ -25,6 +25,14 @@
                 </div>
                 <div class="control-group">
                     <div class="control-label">
+                        {{ form_label(form.flagLabel) }}
+                    </div>
+                    <div class="controls">
+                        {{ form_widget(form.flagLabel) }}
+                    </div>
+                </div>
+                <div class="control-group">
+                    <div class="control-label">
                         {{ form_label(form.active) }}
                     </div>
                     <div class="controls">
