--- a/Resources/views/AuditFormSection/edit.html.twig
+++ b/Resources/views/AuditFormSection/edit.html.twig
@@ -71,7 +71,7 @@
             <thead>
                 <tr>
                     <th width=20%>Title</th>
-                    <th width=60%></th>
+                    <th width=60%>Description</th>
                     <th width=5%>Weight</th>
                     <th width=5%>Flag</th>
                     <th width=10%></th>
