--- a/Resources/views/AuditFormField/_load.html.twig
+++ b/Resources/views/AuditFormField/_load.html.twig
@@ -12,15 +12,15 @@
     <td>
         <div class="btn-group">
             <a class="btn btn-mini cisco-audit-field-view">
-                <i class="icon-eye-open" title="View Field's details"></i>
+                <i class="icon-eye-open" title="View"></i>
             </a>
             <a class="btn btn-mini cisco-audit-field-edit"
                 href="{{ path( 'cisco_auditfield_edit', { 'field_id': field.id } ) }}">
-                <i class="icon-wrench" title="Edit Field"></i>
+                <i class="icon-wrench" title="Edit"></i>
             </a>
             <a class="btn btn-mini cisco-audit-field-remove"
                href="{{ path( 'cisco_auditsection_remove', { 'section_id' : section.id ,'field_id': field.id } ) }}">
-                <i class="icon-minus" title="Remove Field"></i>
+                <i class="icon-minus" title="Remove"></i>
             </a>
         </div>
     </td>
