--- a/Resources/views/Audit/add.html.twig
+++ b/Resources/views/Audit/add.html.twig
@@ -17,12 +17,11 @@
             <table class="table table-condensed table-hover">
                 <thead>
                     <tr>
-                        <th>S.No.</th>
-                        <th>Field</th>
-                        <th>Score</th>
-                        <th></th>
-                        <th>Weight</th>
-                        <th>Reviewer's Comment</th>
+                        <th style="width: 4%;">S.No.</th>
+                        <th style="width: 36%;">Field</th>
+                        <th style="width: 9%;">Score</th>
+                        <th style="width: 9%;" colspan="2">Weight</th>
+                        <th style="width: 42%;">Reviewer's Comment</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -34,16 +33,12 @@
                     {% for field in section.fields %}
                         <tr class="cisco-audit-field-row" field-id="{{ field.id }}">
                             <td>{{ counter }}</td>
-                            <td>
-                                <a href="#" rel="tooltip" data-placement="top" title="{{ field.description  }}">
-                                    <font color="#333333">{{ field.title }}</font>
-                                </a>
-                            </td>
+                            <td>{{ field.title }}</td>
                             <td class="cisco-audit-field-score">
                             {% set form = craue_cloneForm(scoreform) %}
                                 <select class="span1 cisco-audit-score-selector" name="score[{{ field.id }}][value]"
                                         href="{{ path( 'cisco_auditfield_calculate_score' ) }}">
-                                {% set ret = 'Options:'%}
+                                {% set ret = field.description ~ '\n' %}
                                 {% for score, label in field.scores %}
                                     <option value="{{ score }}">
                                         {{ score }}
@@ -52,7 +47,7 @@
                                 {% endfor %}
                             </td>
                             <td>
-                                <a href="#" rel="tooltip" data-placement="top" title="{{ ret }}">
+                                <a rel="tooltip" data-placement="top" title="{{ ret }}" class="cisco-audit-field-view">
                                     <i class="icon-info-sign"></i>
                                 </a>
                             </td>
@@ -61,6 +56,19 @@
                             </td>
                             <td>
                                 <textarea class="span4" name="score[{{ field.id }}][comment]"></textarea>
+                            </td>
+                        </tr>
+                        <tr class="cisco-audit-desc-row info" style="display: none;">
+                            <td></td>
+                            <td colspan="5">
+                                <div class="info">
+                                    <h4 class="text-info">{{ field.description }}</h4>
+                                    {% for score, label in field.scores %}
+                                    <p class="text-info">
+                                        {{ score }} - {{ label }}
+                                    </p>
+                                    {% endfor %}
+                                </div>
                             </td>
                         </tr>
                         {% set counter = counter + 1 %}
@@ -76,11 +84,10 @@
                     </tr>
                 {% endfor %}
                     <tr class="cisco-audit-score-row">
-                        {#% set auditScore = get_resultforform( audit ) %#}
-                        {% set auditWeight = get_weightforform( audit ) %}
+                        {% set auditWeight = get_weightforaudit( audit ) %}
                         <td colspan="2" style="text-align: right">Final Score</td>
-                        <!-- auditScore is breaking and needs to be investigated -->
-                        <td class="cisco-audit-score" value="100.00{#{ auditScore }#}">100.00 %{#{ get_resultforform( audit ) }#}</td>
+                        <!-- can not get the audit score when first calling the form -->
+                        <td class="cisco-audit-score" value="100.00">100.00 %</td>
                         <td></td>
                         <td class="cisco-audit-weight" value="{{ auditWeight }}">{{ auditWeight }}</td>
                         <td></td>
@@ -90,7 +97,7 @@
         </form>
     </div>
 </div>
-<script type="text/javascript" data-foo="{{ audit.auditform.flagLabel }}">
+<script type="text/javascript">
 
     var flagLabel = '{{ audit.auditform.flagLabel }}';
 
