added a fading effect on the btn group on edit templates

--- a/Resources/views/AuditForm/edit.html.twig
+++ b/Resources/views/AuditForm/edit.html.twig
@@ -50,11 +50,12 @@
             </div>
             <table class="table table-condensed table-hover cisco-audit-table">
                 <thead>
-                        <th width=20%>Title</th>
-                        <th width=65%></th>
-                        <th width=5%>Weight</th>
-                        <th width=5%>Flag</th>
-                        <th width=5%></th>
+                    <tr>
+                        <th width="20%">Title</th>
+                        <th width="65%"></th>
+                        <th width="5%">Weight</th>
+                        <th width="5%">Flag</th>
+                        <th width="5%"></th>
                     </tr>
                 </thead>
                 <tbody>
