--- a/Resources/views/AuditFormField/_load.html.twig
+++ b/Resources/views/AuditFormField/_load.html.twig
@@ -9,8 +9,8 @@
         <i class="icon-check-empty"/>
     {% endif %}
     </td>
-    <td>
-        <div class="btn-group">
+    <td style="padding: 0 0 0 0 ">
+        <div class="btn-group pull-right cisco-audit-options" style="display: none;">
             <a class="btn btn-mini cisco-audit-field-view">
                 <i class="icon-eye-open" title="View Field's details"></i>
             </a>
