--- a/Resources/views/AuditFormField/_load.html.twig
+++ b/Resources/views/AuditFormField/_load.html.twig
@@ -25,20 +25,33 @@
         </div>
     </td>
 </tr>
-<tr class="cisco-audit-desc-row" style="display: none;">
-    <td style="padding-left: 50px;"><i>Description: </i></td>
-    <td colspan="4">{{ field.description }}</td>
-</tr>
-<tr class="cisco-audit-desc-row" style="display: none;">
-    <td style="padding-left: 50px;"><i>Scores: </i></td>
-    <td colspan="4">
-    {% for score, label in field.scores %}
-        <div>
-            {{ score }}: {{ label }}
+<tr class="cisco-audit-desc-row info" style="display: none;">
+    <td style="padding-left: 50px;">
+        <div class="text-info">
+            <i>Description: </i>
         </div>
-    {% else %}
-        <div>No scores defined</div>
-    {% endfor %}
+    </td>
+    <td colspan="4">
+        <h4 class="text-info">
+            {{ field.description }}
+        </h4>
     </td>
 </tr>
+<tr class="cisco-audit-desc-row info" style="display: none;">
+    <td style="padding-left: 50px;">
+        <div class="text-info"><i>Scores: </i></div>
+    </td>
+    <td colspan="4">
+        <div class="info">
+        {% for score, label in field.scores %}
+            <div class="text-info">
+                {{ score }} - {{ label }}
+            </div>
+        {% else %}
+            <div>No scores defined</div>
+        {% endfor %}
+        </div>
+    </td>
+</tr>
+
 {% endblock %}
