bugfix on field formtype and minor edit on template as well as service on AuditExtension

--- a/Resources/views/Audit/view.html.twig
+++ b/Resources/views/Audit/view.html.twig
@@ -19,7 +19,7 @@
                     {% if audit.flag == true %}
                         <div class="text-warning">{{ audit.auditForm.flagLabel }}</div>
                     {% else %}
-                        {{ audit.totalResult }}
+                        {{ get_resultforaudit( audit ) }} %
                     {% endif %}
                     </td>
                     <td>{{ audit.auditingUser }}</td>
@@ -74,8 +74,8 @@
                     <td>{{ audit.auditForm.flagLabel }}</td>
                     <td></td>
                     {% else %}
-                    <td>{{ attribute( audit, 'resultForSection', [ section ] ) }}</td>
-                    <td>{{ section.weight }}</td>
+                    <td>{{ get_resultforsection( audit, section ) }} %</td>
+                    <td>{{ get_weightforsection( section ) }}</td>
                     {% endif %}
                     <td></td>
                 </tr>
@@ -86,10 +86,10 @@
                 {% if audit.flag == true %}
                     <div class="text-warning">{{ audit.auditForm.flagLabel }}</div>
                 {% else %}
-                    {{ audit.totalResult }}
+                    {{ get_resultforaudit( audit ) }} %
                 {% endif %}
                 </td>
-                <td>{{ audit.totalWeight }}</td>
+                <td>{{ get_weightforaudit( audit ) }}</td>
                 <td></td>
             </tr>
         </table>
